@@ -54,6 +54,7 @@ loadcommand.unable-to-load-world: Unable to load {0}!
 loadcommand.load-existing-world: To import an existing world use /dd create.
 loadcommand.world-loaded: &YELLOW{0} &GREENhas been loaded.
 loadcommand.may-not-load-world-twice: You may not load a world twice.
+loadcommand.list-worlds-hint: You may only load worlds configured by DimensionDoor.
 ## Remove command
 removecommand.name: remove
 removecommand.description: Unload and remove a world from DimensionDoor.
@@ -65,15 +66,24 @@ removecommand.remove-data-also: &YELLOWYou will still need to remove the world d
 removecommand.must-specify-a-world-name: You must specify a world name!
 removecommand.list-worlds-hint: You may only remove worlds configured by DimensionDoor.
 
-unloadcommand-name: unload
-unloadcommand-description: Unload a world from memory..
-unloadcommand-permission-description: Allow users to unload worlds.
-unloadcommand-usage: <name>
+unloadcommand.name: unload
+unloadcommand.description: Unload a world from memory..
+unloadcommand.permission-description: Allow users to unload worlds.
+unloadcommand.usage: <name>
 unloadcommand.world-is-not-managed: {0} is not managed by DimensionDoor.
 unloadcommand.list-worlds-hint: You may only unload worlds configured by DimensionDoor.
 unloadcommand.world-unloaded: {0} has been unloaded.
+unloadcommand.must-specify-a-world-name: You must specify a world name!
+unloadcommand.list-worlds-hint: You may only unload worlds configured by DimensionDoor.
 
 world-unloaded: &YELLOW{0} &GREENhas been unloaded.
+
+# Management commands
+listcommand.name: list
+listcommand.description: List all the available worlds.
+listcommand.permission-description: Allow users to list all available worlds.
+listcommand.usage:
+listcommand.header: &LIGHT_PURPLECurrently managing &AQUA{0} &LIGHT_PURPLEworlds:
 
 clearcommand-name: clear
 clearcommand-description: Clear all monsters and animals from a world.
